tests/spec/emit/snapshots/propagate_in_for_iterable.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn g() -> Result<Slice<int>, string> { Ok([1, 2, 3]) }
  
  fn f() -> Result<int, string> {
    let mut s = 0
    for i in g()? { s = s + i }
    Ok(s)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func g() lisette.Result[[]int, string] {
	return lisette.MakeResultOk[[]int, string]([]int{1, 2, 3})
}

func f() lisette.Result[int, string] {
	s := 0
	check := g()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[int, string](check.ErrVal)
	}
	for _, i := range check.OkVal {
		s += i
	}
	return lisette.MakeResultOk[int, string](s)
}
