tests/spec/emit/snapshots/propagate_in_loop_break_value.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn g() -> Result<int, string> { Ok(5) }
  
  fn f() -> Result<int, string> {
    let x = loop { break g()? }
    Ok(x)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func g() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](5)
}

func f() lisette.Result[int, string] {
	var x int
	for {
		check := g()
		if check.Tag != lisette.ResultOk {
			return check
		}
		x = check.OkVal
		break
	}
	return lisette.MakeResultOk[int, string](x)
}
