tests/spec/emit/snapshots/propagate_in_range_start.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn g() -> Result<int, string> { Ok(0) }
  
  fn f() -> Result<int, string> {
    let mut s = 0
    for i in g()?..5 { s = s + i }
    Ok(s)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func g() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](0)
}

func f() lisette.Result[int, string] {
	s := 0
	check := g()
	if check.Tag != lisette.ResultOk {
		return check
	}
	for i := check.OkVal; i < 5; i++ {
		s += i
	}
	return lisette.MakeResultOk[int, string](s)
}
