tests/spec/emit/snapshots/propagate_in_struct_literal_field.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct User {
    id: int,
    name: string,
  }
  
  fn get_id() -> Result<int, string> { Ok(1) }
  fn get_name() -> Result<string, string> { Ok("Ada") }
  
  fn make_user() -> Result<User, string> {
    Ok(User {
      id: get_id()?,
      name: get_name()?,
    })
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type User struct {
	id   int
	name string
}

func getId() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](1)
}

func getName() lisette.Result[string, string] {
	return lisette.MakeResultOk[string, string]("Ada")
}

func makeUser() lisette.Result[User, string] {
	check := getId()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[User, string](check.ErrVal)
	}
	check_1 := getName()
	if check_1.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[User, string](check_1.ErrVal)
	}
	return lisette.MakeResultOk[User, string](User{
		id:   check.OkVal,
		name: check_1.OkVal,
	})
}
