tests/spec/emit/snapshots/propagate_in_struct_literal_spread_base.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct User {
    id: int,
    name: string,
  }
  
  fn get_base() -> Result<User, string> {
    Ok(User { id: 1, name: "a" })
  }
  
  fn override_id() -> Result<User, string> {
    Ok(User { id: 2, ..get_base()? })
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type User struct {
	id   int
	name string
}

func getBase() lisette.Result[User, string] {
	return lisette.MakeResultOk[User, string](User{
		id:   1,
		name: "a",
	})
}

func overrideId() lisette.Result[User, string] {
	check_1 := getBase()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	copy_2 := check_1.OkVal
	copy_2.id = 2
	return lisette.MakeResultOk[User, string](copy_2)
}
